# rest2kafka

./: .gitignore  Cargo.toml  README.md  run_rest2kafka.sh  run_worker.sh  test_curl.sh
src/: main.rs  main_worker.rs  utils.rs
terraform/: apply.sh  dev-variables.tfvars  eventhub.tf  output.tf  validate.sh  variables.tf
