[package]
name = "rest2kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rest2kafka"
path = "src/main.rs"

[[bin]]
name = "kafkaworker"
path = "src/main_worker.rs"


[dependencies]
actix-web = "4.5"
kafka = "0.10"
log = "0.4"
pretty_env_logger = "0.5"
serde = "1.0"
serde_json = "1.0"
